--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ window.onload = function(){
 
 // توليد قائمة القنوات
 const channelData = [
-  {name:'shark 1', src:'https://dokko1new.newkso.ru/dokko1/premium93/mono.m3u8'},
+  {name:'shark 1', src:'https://shls-live-enc.edgenextcdn.net/out/v1/948c54279b594944adde578c95f1d7d1/index.m3u8'},
   {name:'shark 2', src:'video2.mp4'},
   {name:'shark 3', src:'video3.mp4'},
   {name:'shark 4', src:'video4.mp4'},
