--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ window.onload = function(){
 // توليد قائمة القنوات
 const channelData = [
   {name:'shark 1', src:'https://shls-live-enc.edgenextcdn.net/out/v1/948c54279b594944adde578c95f1d7d1/index.m3u8'},
-  {name:'shark 2', src:'video2.mp4'},
+  {name:'shark 2', src:'https://1.abcdjklaksnj.sbs/hls/1/stream.m3u8'},
   {name:'shark 3', src:'video3.mp4'},
   {name:'shark 4', src:'video4.mp4'},
   {name:'shark 5', src:'video5.mp4'},
