--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
     .font-almarai { font-family: 'Almarai', sans-serif; }
     .font-amiri { font-family: 'Amiri', serif; }
 
+    /* Custom Color Theme */
+    .custom-theme {
+        --text: #e5e7eb; /* Default light text for dark backgrounds */
+        --muted: #94a3b8;
+    }
+    .custom-theme.light-text {
+        --text: #1e293b; /* Dark text for light backgrounds */
+        --muted: #64748b;
+    }
+    .custom-theme,
+    .custom-theme.light-text {
+        --bg: var(--custom-bg-color);
+        --bg-soft: color-mix(in srgb, var(--custom-bg-color), transparent 5%);
+        --panel: color-mix(in srgb, var(--custom-bg-color), transparent 10%);
+        --card: color-mix(in srgb, var(--custom-bg-color), transparent 5%);
+    }
+
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
@@ -518,7 +535,7 @@
                 </select>
               </div>
               <div class="field" style="margin-top: 10px;">
-                <label>لون الخلفية</label>
+                <label>لون الخلفية المخصص</label>
                 <input type="color" id="backgroundColorPicker" oninput="applyBackgroundColor(this.value)" />
               </div>
             </div>
@@ -635,9 +652,9 @@
     // إنشاء منتجات تجريبية إذا لم تكن موجودة
     if (db.products.length === 0) {
         db.products = [
-            { id: '1', name: 'لابتوب', barcode: '123456789', wholesalePrice: 1000, retailPrice: 1200, unit: 'قطعة', details: 'جهاز لابتوب حديث', quantity: 50, category:'إلكترونيات', expiryDate:'2026-12-31', expirationDate:'2028-12-31' },
-            { id: '2', name: 'هاتف ذكي', barcode: '987654321', wholesalePrice: 500, retailPrice: 600, unit: 'قطعة', details: 'هاتف ذكي بذاكرة 128GB', quantity: 100, category:'إلكترونيات', expiryDate:'', expirationDate:'' },
-            { id: '3', name: 'شاشة', barcode: '1122334455', wholesalePrice: 300, retailPrice: 350, unit: 'قطعة', details: 'شاشة مقاس 24 بوصة', quantity: 75, category:'إلكترونيات', expiryDate:'', expirationDate:'' }
+            { id: '1', name: 'لحم بقري', barcode: '123456789', wholesalePrice: 1000, retailPrice: 1200, unit: 'كيلو', details: 'لحم بقري محلي', quantity: 50, category:'لحوم', expiryDate:'2026-12-31', expirationDate:'2028-12-31' },
+            { id: '2', name: 'لحم ضأن', barcode: '987654321', wholesalePrice: 500, retailPrice: 600, unit: 'كيلو', details: 'لحم ضأن طازج', quantity: 100, category:'لحوم', expiryDate:'', expirationDate:'' },
+            { id: '3', name: 'هاتف ذكي', barcode: '1122334455', wholesalePrice: 300, retailPrice: 350, unit: 'قطعة', details: 'شاشة مقاس 24 بوصة', quantity: 75, category:'إلكترونيات', expiryDate:'', expirationDate:'' }
         ];
         save();
     }
@@ -739,7 +756,7 @@
       const row = document.createElement('tr');
       row.innerHTML = `
         <td>${item.name}</td>
-        <td><input type="number" value="${item.quantity}" oninput="updateItemQuantity('${item.id}', this.value)" style="width: 50px; background: none; border: none; text-align: center; color: white;" /></td>
+        <td><input type="number" value="${item.quantity}" oninput="updateItemQuantity('${item.id}', this.value)" style="width: 50px; background: none; border: none; text-align: center; color: var(--text);" /></td>
         <td>${Math.round(item.price)} ${db.settings.currency}</td>
         <td>${Math.round(itemTotal)} ${db.settings.currency}</td>
         <td>
@@ -1087,8 +1104,21 @@
   function applyBackgroundColor(color) {
       db.settings.backgroundColor = color;
       save();
-      document.body.style.setProperty('--custom-bg-color', color);
-      document.body.style.background = 'var(--custom-bg-color)';
+      const body = document.body;
+      body.style.setProperty('--custom-bg-color', color);
+      body.classList.add('custom-theme');
+      body.classList.remove('theme-light', 'theme-blue-sky', 'theme-green-leaf', 'theme-orange-fire');
+
+      // Check perceived brightness and apply light/dark text class
+      const r = parseInt(color.substring(1, 3), 16);
+      const g = parseInt(color.substring(3, 5), 16);
+      const b = parseInt(color.substring(5, 7), 16);
+      const brightness = ((r * 299) + (g * 587) + (b * 114)) / 1000;
+      if (brightness > 125) {
+          body.classList.add('light-text');
+      } else {
+          body.classList.remove('light-text');
+      }
   }
   
   // ====== وظائف صفحة الباركود الجديدة ======
